--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,9 @@ a {
 }
 
 .mainContainer {
+  min-height: calc(100vh - 60px - 64px);
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .animeLeft {
@@ -94,5 +96,5 @@ a {
 .App {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh + 10rem);
+  min-height: calc(100vh);
 }
